Fix: missing padding

--- a/assets/src/scss/general.scss
+++ b/assets/src/scss/general.scss
@@ -621,6 +621,7 @@
 
 .sws-search-recent-list {
 	margin: 0 !important;
+	padding: 0 !important;
 }
 
 .sws-search-recent-list-item {
